--- a/releng/frida.props
+++ b/releng/frida.props
@@ -39,7 +39,7 @@
     <Link>
       <ImportLibrary>$(IntDir)$(ProjectName).lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(IntDir)..\gum-32;$(IntDir)..\gum-64;$(IntDir)..\gumjs-32;$(IntDir)..\gumjs-64;$(SolutionDir)build\sdk-windows\$(PlatformName)-$(ConfigurationName)\lib;$(SolutionDir)build\sdk-windows\$(PlatformName)-$(ConfigurationName)\lib\gio\modules;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libffi.a;libgee-0.8.a;libgio-2.0.a;libgioopenssl.a;libglib-2.0.a;libgmodule-2.0.a;libgobject-2.0.a;libgthread-2.0.a;libpcre2-8.a;libjson-glib-1.0.a;libminizip.a;libnice.a;libsoup-3.0.a;libngtcp2.a;libnghttp2.a;libsqlite3.a;libpsl.a;libusrsctp.a;libcapstone.a;libquickjs.a;libtcc.a;libv8-10.0.a;libcrypto.a;libssl.a;libz.a;libbrotlicommon.a;libbrotlienc.a;libbrotlidec.a;crypt32.lib;dnsapi.lib;iphlpapi.lib;ole32.lib;psapi.lib;secur32.lib;shlwapi.lib;winmm.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libffi.a;libgee-0.8.a;libgio-2.0.a;libgioopenssl.a;libglib-2.0.a;libgmodule-2.0.a;libgobject-2.0.a;libgthread-2.0.a;libpcre2-8.a;libjson-glib-1.0.a;libminizip.a;libnice.a;libsoup-3.0.a;libngtcp2.a;libnghttp2.a;libsqlite3.a;libpsl.a;liblwip.a;libusrsctp.a;libcapstone.a;libquickjs.a;libtcc.a;libv8-10.0.a;libcrypto.a;libssl.a;libz.a;libbrotlicommon.a;libbrotlienc.a;libbrotlidec.a;crypt32.lib;dnsapi.lib;iphlpapi.lib;ole32.lib;psapi.lib;secur32.lib;shlwapi.lib;winmm.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <PropertyGroup Label="Configuration">
