--- a/deps.toml
+++ b/deps.toml
@@ -208,7 +208,7 @@ dependencies = [
 ]
 
 [lwip]
-name = "lwip"
+name = "lwIP"
 version = "f669c58256feff196aeeecc712761ce01a0b2a56"
 url = "https://github.com/frida/lwip.git"
 options = [
