deps: Enable lwIP Ethernet support
Co-authored-by: Håvard Sørbø <havard@hsorbo.no>

--- a/deps.toml
+++ b/deps.toml
@@ -216,7 +216,7 @@ options = [
     "-Dipv6=enabled",
     "-Ddns=disabled",
     "-Darp=disabled",
-    "-Dethernet=disabled",
+    "-Dethernet=enabled",
     "-Dtcp_mss=1360",
     "-Dtcp_snd_buf=65535",
     "-Dtcp_wnd=65535",
