--- a/deps.toml
+++ b/deps.toml
@@ -207,6 +207,12 @@ dependencies = [
     "openssl",
 ]
 
+[libusb]
+when = "machine.os in {'windows', 'macos', 'linux'}"
+name = "libusb"
+version = "cf71d6bc3138477b78099ca45df164d039643be6"
+url = "https://github.com/frida/libusb.git"
+
 [lwip]
 name = "lwIP"
 version = "9f64c40cac2e77eddf6b3913961fdd056d307716"
