Add preliminary support for machine.os == 'none'

--- a/deps.toml
+++ b/deps.toml
@@ -32,7 +32,7 @@ dependencies = [
 # We use Apple's implementation in toolchains to make them smaller.
 when = """ \
        (machine.is_apple and bundle is Bundle.SDK) \
-       or machine.os in {'android', 'qnx'} \
+       or machine.os in {'android', 'qnx', 'none'} \
        or machine.config == 'uclibc' \
        """
 name = "libiconv"
@@ -97,7 +97,7 @@ dependencies = [
     "zlib",
     { id = "libiconv", when = """ \
                               (machine.is_apple and bundle is Bundle.SDK) \
-                              or machine.os in {'android', 'qnx'} \
+                              or machine.os in {'android', 'qnx', 'none'} \
                               or machine.config == 'uclibc' \
                               """ }
 ]
@@ -112,6 +112,7 @@ options = [
 ]
 
 [xz]
+when = "machine.os != 'none'"
 name = "XZ Utils"
 version = "e70f5800ab5001c9509d374dbf3e7e6b866c43fe"
 url = "https://github.com/frida/xz.git"
@@ -120,11 +121,13 @@ options = [
 ]
 
 [brotli]
+when = "machine.os != 'none'"
 name = "Brotli"
 version = "01d9e2922ca878965ebcd71ee8965d2a7aadb47a"
 url = "https://github.com/frida/brotli.git"
 
 [minizip-ng]
+when = "machine.os != 'none'"
 name = "minizip-ng"
 version = "dfc1ccc070ff7bb50726c80215cac515253a8ba0"
 url = "https://github.com/frida/minizip-ng.git"
@@ -142,6 +145,7 @@ dependencies = [
 ]
 
 [sqlite]
+when = "machine.os != 'none'"
 name = "SQLite"
 version = "9337327a50008f2d2236112ccb6f44059b1bafbd"
 url = "https://github.com/frida/sqlite.git"
@@ -166,6 +170,7 @@ dependencies = [
 ]
 
 [glib-networking]
+when = "machine.os != 'none'"
 name = "glib-networking"
 version = "af4b017028e695528951c749a7096e96359521d8"
 url = "https://github.com/frida/glib-networking.git"
@@ -182,6 +187,7 @@ dependencies = [
 ]
 
 [libnice]
+when = "machine.os != 'none'"
 name = "libnice"
 version = "e12567b0a16a0c2eb5dfe5e0782baba8496772ff"
 url = "https://github.com/frida/libnice.git"
@@ -205,6 +211,7 @@ version = "ffff4bdfe8faa38cecfad5aab106cae923502d55"
 url = "https://github.com/frida/libusb.git"
 
 [lwip]
+when = "machine.os != 'none'"
 name = "lwIP"
 version = "267d9f082e9e38083b643421a93c03d4a7046fd0"
 url = "https://github.com/frida/lwip.git"
@@ -224,6 +231,7 @@ dependencies = [
 ]
 
 [usrsctp]
+when = "machine.os != 'none'"
 name = "usrsctp"
 version = "f459ae9d3700c06e59d709901e92c08e31c6e623"
 url = "https://github.com/frida/usrsctp.git"
@@ -234,6 +242,7 @@ options = [
 ]
 
 [libgee]
+when = "machine.os != 'none'"
 name = "libgee"
 version = "ad17ed847039469fcc2dc711ecfee2bbf7d2bf87"
 url = "https://github.com/frida/libgee.git"
@@ -260,6 +269,7 @@ dependencies = [
 ]
 
 [libpsl]
+when = "machine.os != 'none'"
 name = "libpsl"
 version = "b76c0fed2e27353d5fbb067ecdfdf76d2281eb91"
 url = "https://github.com/frida/libpsl.git"
@@ -270,6 +280,7 @@ options = [
 ]
 
 [libxml2]
+when = "machine.os != 'none'"
 name = "libxml2"
 version = "f09ad5551829b7f2df3666759e701644a0ea8558"
 url = "https://github.com/frida/libxml2.git"
@@ -280,6 +291,7 @@ options = [
 ]
 
 [ngtcp2]
+when = "machine.os != 'none'"
 name = "ngtcp2"
 version = "828dcaed498b40954e1b496664a3309796968db6"
 url = "https://github.com/frida/ngtcp2.git"
@@ -288,11 +300,13 @@ dependencies = [
 ]
 
 [nghttp2]
+when = "machine.os != 'none'"
 name = "nghttp2"
 version = "ae13d24ea59c30e36ca53d1b22c4e664588d0445"
 url = "https://github.com/frida/nghttp2.git"
 
 [libsoup]
+when = "machine.os != 'none'"
 name = "libsoup"
 version = "80dc080951c9037aef51a40ffbe4508d3ce98d1b"
 url = "https://github.com/frida/libsoup.git"
@@ -351,6 +365,7 @@ version = "722c253d8dece3bc9a46b6f510c6682329d838b7"
 url = "https://github.com/frida/tinycc.git"
 
 [openssl]
+when = "machine.os != 'none'"
 name = "OpenSSL"
 version = "7b86cb6a0c5cb9d79dca012c98a0a30a58eef5b5"
 url = "https://github.com/frida/openssl.git"
@@ -365,7 +380,7 @@ when = """ \
        and machine.arch != 'arm64beilp32' \
        and not machine.arch.startswith('mips') \
        and not machine.arch.startswith('powerpc') \
-       and machine.os != 'qnx' \
+       and machine.os not in {'none', 'qnx'} \
        """
 name = "V8"
 version = "990fdb00e1506126019493dd3bda4d416c81eaee"
