deps: Clarify GLib config for machine.os == 'none'
Even though it will end up using an external libiconv, it's better to be
explicit.

--- a/deps.toml
+++ b/deps.toml
@@ -87,7 +87,7 @@ options = [
     { value = "-Dglib_checks=false", when = "machine.config_is_optimized" },
     { value = "-Diconv=external", when = """ \
                                          machine.is_apple \
-                                         or machine.os in {'android', 'qnx'} \
+                                         or machine.os in {'android', 'qnx', 'none'} \
                                          or machine.config == 'uclibc' \
                                          """ }
 ]
