deps: Use QuickJS stack_mode=optimize for Barebone
To better support XNU, which uses 16K stacks.

--- a/deps.toml
+++ b/deps.toml
@@ -350,6 +350,7 @@ options = [
     "-Dbignum=true",
     "-Datomics=disabled",
     "-Dstack_check=disabled",
+    { value = "-Dstack_mode=optimize", when = "machine.os == 'none'" },
 ]
 
 [tinycc]
